[package]
name = "rust-socks5-tool"
version = "0.1.0"
edition = "2021"
authors = ["evasilence <1668791283@qq.com>"]
repository = "https://github.com/evasilence/rust-socks5-tool"
description = "A lightweight SOCKS5 proxy tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
