[package]
name = "rust-socks5-tool"
version = "0.1.9"
edition = "2021"
authors = ["evasilence <1668791283@qq.com>"]
repository = "https://github.com/evasilence/rust-socks5-tool"
description = "A lightweight SOCKS5 proxy tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = "0.6.1"

# Windows XP/2003 support requires older MSVC toolchain or MinGW, but Rust dropped support for XP.
# We can try to target i686-pc-windows-msvc for 32-bit support which covers older 32-bit systems,
# but true XP support is very hard with modern Rust.
# We will add i686 targets for 32-bit support.

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
